objects/WT_Activity_Extension__c.object
<CustomObject>
    <description>To store TM Call Records</description>
    <fields>
        <fullName>WT_14Day_TMOnboarding_Call__c</fullName>
        <label>14 Day TM Onboarding Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_60Day_TMOnboarding_Call__c</fullName>
        <label>60 Day TM Onboarding Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Account_Activity_As_Initially_Said__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Account activity same as initially said?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Activity_Type__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Activity Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Appointment</fullName>
                </value>
                <value>
                    <fullName>Phone Call</fullName>
                </value>
                <value>
                    <fullName>Task</fullName>
                </value>
                <value>
                    <fullName>Letter</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Admin_Attendees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Administrator Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Annual_Sales_Or_AUA__c</fullName>
        <label>Annual Sales or AUA</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>WT_Any_Changes_Over_Last_60_Days__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Any changes over the last 60 days?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Are_Fees_Set_Up_Correctly__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <label>Are the fees set up correctly?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TM_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_BSA_Attendees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>BSA Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Changes_To_AML_Policies__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain AML policy/procedure changes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Changes_To_Client_Fund_Transfer__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Explain Fund Sending Changes (Wires)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Changes_To_Senior_Management__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Senior management changes?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Changes_To_Target_Market__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Changes to target market</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Contact_Status__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Contact Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activity Not Executed</fullName>
                </value>
                <value>
                    <fullName>Follow Up Appointment Scheduled</fullName>
                </value>
                <value>
                    <fullName>Follow Up Call Scheduled</fullName>
                </value>
                <value>
                    <fullName>Goal Met</fullName>
                </value>
                <value>
                    <fullName>Goal Not Met</fullName>
                </value>
                <value>
                    <fullName>Message Left</fullName>
                </value>
                <value>
                    <fullName>No Answer, No Message Left</fullName>
                </value>
                <value>
                    <fullName>Wrong Number on File</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Customer_Uses_Product__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Customer Uses Product</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Dashboard_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Dashboard Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Did_You_Customize_DB_Views_Panels__c</fullName>
        <label>Did you customize DB, views &amp; panels?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Digital_Products_Comments__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Digital Products Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Direction__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Direction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Doc_Timeline_Satisfact__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <label>Documentation timeline satisfactory?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Document_Comments__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Document Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Does_Accept_In_Kind_Contributions__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Do you accept in-kind Contributions?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Due_Date__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Duration__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Easy_To_Use_Our_Digital_Products__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <label>Is it easy to use our digital products?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Entertaining__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Entertaining</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>High End</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_EventId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>EventId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_External_Planning_Notes__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>External Planning Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Favorite_Dashboard_Panel__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Favorite Dashboard Panel</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Fees_Comments__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Fees Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Foreign_Domestic_Corresp_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign &amp; Domestic Correspondent Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Foreign_owned_on_fgn_land_private_Inv__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign owned on fgn land/private Inv.</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Has_Intent_To_Trade_In_Cryptocurrency__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intend to trade Cryptocurrency?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Has_Intent_To_Trade_In_MRB__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Intend to trade MRB (Marijuana)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Has_Report_On_Internal_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated SOC1/SSAE16 report (get copy)?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_How_Would_You_Rate_Training__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <label>How would you rate the training?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_If_Yes_Please_Explain_MRB__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes, please explain:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_If_Yes_To_Foreign_Domiciled_Business__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>If yes to Foreign Domiciled business:</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Is_Accepting_Third_Party_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wholesalers Accepting 3rd Party Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Annual_Admin_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this an annual administrator call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Annual_Review_Addendum_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is this an annual review addendum call?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Brokers_Dealers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Brokers Dealers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Casinos__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Casinos (land or riverboat, OTBs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Cryptocurrency_Exchanges__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cryptocurrency Exchanges</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Deposit_Brokers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deposit Brokers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Foreign_Misson_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Embassy, Foreign Consulate/Mission Accts</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Foreign_Politically_Exposed_Cust__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Foreign Politically Exposed (PEPs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Gaming_Track_Machine_Establishment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gaming (Race Tracks, Gaming Machine)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Internet_Gambling__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Internet Gambling</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Lending_PayDay_Finance_Businesses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lending/PayDay Finance Businesses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Money_Service_Businesses__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Money Service Businesses (MSBs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Precious_Metal_Dealers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Precious Metal Dealers (PMDs)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Private_Banking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Private Banking (def by US Patriot Act)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Providing_Bulk_Cash_Shipment_Svcs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bulk Cash Shipment Services</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Shell_And_Private_Investment_Comp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shell &amp; Intl Private Investment Company</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Is_Third_Party_Payment_Processors__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Party Payment Processors</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>WT_Likelihood_of_Moving_to_Wintrust__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Likelihood of Moving to Wintrust</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Somewhat</fullName>
                </value>
                <value>
                    <fullName>Good</fullName>
                </value>
                <value>
                    <fullName>Great</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_List_All_Exchanges_Or_CounterParties__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>List all exchanges or counterparties</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_MSD_Record_ID__c</fullName>
        <description>Added for store the CRM ID</description>
        <encryptionScheme>None</encryptionScheme>
        <label>MSD Record ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Meet_With_SR_Leadership__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Meet With SR Leadership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ED Wehmer</fullName>
                </value>
                <value>
                    <fullName>Paul Carlisle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Next_Follow_Up_Date__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Follow Up Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>WT_Number_Of_Clients__c</fullName>
        <label>Number of Clients</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Number_Of_Employees__c</fullName>
        <label>Number of Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WT_Onboard_Investors_Managers__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Onboard Investors/Managers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Other_Products_Services_To_Discuss__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Other products &amp; services to discuss?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Outcome_Notes__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Outcome Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>WT_Planning_Notes__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Planning Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Pooled_Investment_Controlling_Party__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Controlling party on pooled investments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Contact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Primary_Objective_Call__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Primary Objective of the Call</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>WT_Product_Partner__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Product Partner</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>International</fullName>
                </value>
                <value>
                    <fullName>Wealth</fullName>
                </value>
                <value>
                    <fullName>TM</fullName>
                </value>
                <value>
                    <fullName>Leasing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Record_Type_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Record Type Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Related_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Activity Extensions</relationshipLabel>
        <relationshipName>Activity_Extensions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WT_Retail_Call_Type__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Retail Call Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Collection Call</fullName>
                </value>
                <value>
                    <fullName>Maturing CD</fullName>
                </value>
                <value>
                    <fullName>OD Call</fullName>
                </value>
                <value>
                    <fullName>OnBoarding Call</fullName>
                </value>
                <value>
                    <fullName>Past Due Loan</fullName>
                </value>
                <value>
                    <fullName>Sales Call</fullName>
                </value>
                <value>
                    <fullName>Service Call</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Review_Type__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <label>Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Status__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_Strategic_Notes_Next_Steps__c</fullName>
        <description>Created as a part of DBSFCRM-155</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Strategic Notes &amp; Next Steps</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>WT_Subject__c</fullName>
        <description>Created as apart of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_TM_Onboarding_Call__c</fullName>
        <description>This field is created to check whether the activity created is for 14 Days or for 60 Days</description>
        <label>TM Onboarding Call</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>14 Days</fullName>
                </value>
                <value>
                    <fullName>60 Days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>WT_TM_Onboarding_Due_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TM Onboarding Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WT_Talking_Points__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Talking Points</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_TaskId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>TaskId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Training_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_Training__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Training</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Trends__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Trends</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_WFG_Attendees__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WFG Attendees</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Can_We_Improve_On__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What can we improve on?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Did_We_Do_Really_Well__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What did we do really well?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Do_We_Need_To_Improve_Upon__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What do we need to improve upon?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Has_Improved_Since_We_Last_Spoke__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What has improved since we last spoke?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Is_Ownership_Structure_Of_Invest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Owner structure of investment (private)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_What_Other_Products_Services_Should__c</fullName>
        <description>Created as a part of DBSFCRM-852</description>
        <encryptionScheme>None</encryptionScheme>
        <label>What other products and services should</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WT_What_Percent_Portfolio_Is_Foreign__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>% of  portfolio that is foreign?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Which_Country_You_Plan_To_Invest_In__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Which country(ies) plan to invest?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>WT_Which_Industries_You_Plan_To_Invest__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan to invest in what industries?</label>
        <type>TextArea</type>
    </fields>
    <label>Activity Extension</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TM Call-{0000}</displayFormat>
        <label>Activity TM Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Extensions</pluralLabel>
    <recordTypes>
        <fullName>TM_Call</fullName>
        <active>true</active>
        <description>Created as part of 852</description>
        <label>TM Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Annual_Review</fullName>
        <active>true</active>
        <description>Created as part of DBSFCRM-155.</description>
        <label>Annual Review</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_CRA_Call</fullName>
        <active>true</active>
        <label>CRA Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_CRA_Event</fullName>
        <active>true</active>
        <label>CRA Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Event</fullName>
        <active>true</active>
        <label>Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Standard_Call</fullName>
        <active>true</active>
        <label>Standard Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Task</fullName>
        <active>true</active>
        <label>Task</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_WFG_Call</fullName>
        <active>true</active>
        <description>Created as part of DBFCRM 1332</description>
        <label>WFG Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Wintrust_Event</fullName>
        <active>true</active>
        <label>Wintrust Event</label>
    </recordTypes>
    <recordTypes>
        <fullName>WT_Wintrust_Task</fullName>
        <active>true</active>
        <label>Wintrust Task</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>